--- a/pom.xml
+++ b/pom.xml
@@ -7,9 +7,17 @@
   <packaging>jar</packaging>
   <name>spaceship-api</name>
 
+  <parent>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-parent</artifactId>
+    <version>2.7.5</version>
+    <relativePath/> <!-- lookup parent from repository -->
+  </parent>
+
   <properties>
     <java.version>17</java.version>
     <spring-boot.version>2.7.5</spring-boot.version>
+    <lombok.version>1.18.24</lombok.version>
   </properties>
 
   <dependencyManagement>
@@ -69,6 +77,13 @@
     <dependency>
       <groupId>org.springframework.kafka</groupId>
       <artifactId>spring-kafka</artifactId>
+    </dependency>
+    <!-- Lombok Dependency -->
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>${lombok.version}</version>
+      <scope>provided</scope>
     </dependency>
   </dependencies>
 </project>
