--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
     <java.version>17</java.version>
     <spring-boot.version>2.7.5</spring-boot.version>
     <lombok.version>1.18.24</lombok.version>
+    <springdoc.version>1.5.12</springdoc.version>
   </properties>
 
   <dependencyManagement>
@@ -70,11 +71,6 @@
       <artifactId>spring-boot-starter-security</artifactId>
     </dependency>
     <dependency>
-      <groupId>io.springfox</groupId>
-      <artifactId>springfox-boot-starter</artifactId>
-      <version>3.0.0</version>
-    </dependency>
-    <dependency>
       <groupId>org.springframework.kafka</groupId>
       <artifactId>spring-kafka</artifactId>
     </dependency>
@@ -85,5 +81,20 @@
       <version>${lombok.version}</version>
       <scope>provided</scope>
     </dependency>
+    <!-- Springdoc OpenAPI Dependency -->
+    <dependency>
+      <groupId>org.springdoc</groupId>
+      <artifactId>springdoc-openapi-ui</artifactId>
+      <version>1.7.0</version>
+    </dependency>
   </dependencies>
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-maven-plugin</artifactId>
+      </plugin>
+    </plugins>
+  </build>
+
 </project>
